-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11.0.4
-
Component/s: hotspot
Even after JDK-8220794 was downported [0] to 11u the JVM still crashes on controlled crash #13 (e.i. ./java -XX:-UseSIGTRAP -XX:-CreateCoredumpOnCrash -XX:ErrorHandlerTest=13) because UseMemBar is not obsoleted on 11u (change JDK-8213436 is not applied [1] to 11u), hence on PPC we still check for memory serialization in the signal handler on a SIGSEGV without checking if it's due to a Data Storage interruption (a case in which it's valid to check for mem serialization) or due to a Instruction Storage interruption (a case in which is _not_ valid to check for a mem serialization instructions, like a branch to an illegal address).
The fix is similar toJDK-8220794, which consists in filtering out the invalid case (Instruction Storage interruption) before calling is_memory_serialization() in the SIGSEGV.
[0] https://bugs.openjdk.java.net/browse/JDK-8221834
[1] https://bugs.openjdk.java.net/browse/JDK-8213436
The fix is similar to
[0] https://bugs.openjdk.java.net/browse/JDK-8221834
[1] https://bugs.openjdk.java.net/browse/JDK-8213436
- relates to
-
JDK-8221834 PPC64: Fix signal handler for SIGSEGV on branch to illegal address
-
- Resolved
-
-
JDK-8220794 PPC64: Fix signal handler for SIGSEGV on branch to illegal address
-
- Resolved
-
-
JDK-8223395 PPC64: Improve comments in the JVM signal handler to match ISA text
-
- Resolved
-