8223266: PPC64: Check for branch to illegal address before checking for mem serialization

Reviewed-by: goetz, mdoerr